# DiaryAI-PersonalHub

./: .gitignore  README.md  docker-compose.yml  main.py
server/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
server/app/: __init__.py  main.py
server/app/ai/: audit.py  cache.py
server/app/api/: deps.py
server/app/api/v1/: auth.py  (+6 more)
server/app/core/: config.py  errors.py  logging.py  security.py
server/app/db/: base.py  session.py
server/app/models/: __init__.py  action_log.py  ai_call_log.py  diary.py  event.py  module.py  profile.py  user.py
server/app/modules/: __init__.py  _base.py  registry.py
server/app/repositories/: base.py  diary_repo.py  event_repo.py  module_repo.py  profile_repo.py  user_repo.py
server/app/schemas/: ai.py  common.py  diary.py  event.py  module.py  profile.py  user.py
server/app/services/: auth_service.py  diary_revision_log.py  diary_service.py  event_service.py  module_service.py  profile_service.py  stats_service.py
server/app/tasks/: celery_app.py  parse_diary.py
server/config/: global_info.json  global_model_memo.jsonc  input.json  output.jsonc  templates.jsonc
server/dao/: dao.py
server/db/: config.py  test.py
server/diaries/: 2026-3-5.txt
server/document/: 开发文档.md  文档.md  项目文档.md
server/initialize/: init_db.py  initialize.py
server/model/: models.py  数据库设计.md
server/result/: output.json
server/tests/: conftest.py  test_diary_revision_log.py  test_health.py  test_modules.py
server/tests/fixtures/: diary_2026_3_5.txt
server/utils/: deepseekDemo.py  executorDemo.py  json_utils.py
(+73 files in other folders)
