[project]
name = "diaryai-server"
version = "0.1.0"
description = "DiaryAI-PersonalHub backend: diary -> AI -> structured personal data hub."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",
    "asyncpg>=0.29.0",
    "redis>=5.1.1",
    "celery>=5.4.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.2",
    "openai>=1.54.0",
    "jinja2>=3.1.4",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.1",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
